# base-fastapi

./: .env.example  .gitignore  Architecture.md  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py
app/core/: dependencies.py  enums.py  exceptions.py  security.py
app/middleware/: cors.py  logging.py  rate_limit.py
app/models/: __init__.py  base.py  user.py
app/repositories/: __init__.py  base.py  user.py
app/routes/: __init__.py  auth.py  health.py  users.py
app/schemas/: __init__.py  auth.py  common.py  user.py
app/services/: __init__.py  auth.py  email.py  user.py
app/tasks/: celery_app.py  email_tasks.py
app/templates/emails/: reset_password.html  verify_email.html  welcome.html
monitoring/grafana/provisioning/dashboards/: dashboard.yml  fastapi.json
monitoring/prometheus/: prometheus.yml
tests/: conftest.py  test_auth.py  test_users.py
